name: which
version: 0.1.0.0
license: BSD3
license-file: LICENSE
author: Obsidian Systems LLC
maintainer: maintainer@obsidian.systems
copyright: 2019 Obsidian Systems LLC
build-type: Simple
extra-source-files: ChangeLog.md
cabal-version: >=1.10
category: System

library
  exposed-modules: System.Which
  build-depends:
                base
              , shelly
              , text
              , template-haskell

  hs-source-dirs:      src
  default-language:    Haskell2010

source-repository head
  type: git
  location: https://github.com/obsidiansystems/which
