name: which
version: 0.2.0.0
license: BSD3
license-file: LICENSE
author: Obsidian Systems LLC
maintainer: maintainer@obsidian.systems
copyright: 2019 Obsidian Systems LLC
build-type: Simple
extra-source-files: ChangeLog.md README.md
cabal-version: >=1.10
category: System
synopsis: Determine the full path to an executable.
description: Determine the full path to an executable, similar to the *nix "which" command.
tested-with:
  GHC  ==8.0.2 || ==8.2.2 || ==8.4.4 || ==8.6.5

library
  exposed-modules: System.Which
  build-depends:
    base                >= 4.9.0 && < 4.13,
    directory           >= 1.0 && < 1.4,
    filepath            >= 1.0 && < 1.5,
    text                >= 1.2.3 && < 1.3,
    template-haskell    >= 2.11.0 && < 2.15,
    transformers        >= 0.3.0.0 && < 0.6.0.0

  hs-source-dirs:      src
  ghc-options:         -Wall
  default-language:    Haskell2010

test-suite spec
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  build-depends:
    base,
    directory,
    filepath,
    unix,
    which
  hs-source-dirs:      test
  ghc-options:         -Wall
  default-language:    Haskell2010

source-repository head
  type: git
  location: https://github.com/obsidiansystems/which
